# chip8emu

./: CMakeLists.txt  README.md
libs/chip/: CMakeLists.txt
libs/chip/include/chip/: chip.hpp
libs/chip/src/: chip.cpp
libs/platform/: CMakeLists.txt
libs/platform/include/platform/: platform.hpp
libs/platform/src/: platform.cpp
src/: main.cpp
